Add command for configuration management

--- a/debian/control
+++ b/debian/control
@@ -18,5 +18,10 @@ Depends: ${misc:Depends},
  python3-rich,
  python3-pydbus,
  python3-libusb1,
+ python3-netifaces,
+ python3-yaml,
  python3-gi,
+ adb,
+ frida,
+ tshark,
 Description: Provision PiRogue CLI tool
