--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,12 @@ export PYBUILD_NAME=pirogue_cli
 %:
 	dh $@ --with python3 --buildsystem=pybuild
 
+override_dh_builddeb:
+	dh_builddeb -- -Zgzip
+
 # Shipped in the tarball, modified after a build:
 override_dh_clean:
 	dh_clean
 	rm -rf pirogue_cli.egg-info/
+
+
