--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,7 @@ Depends: ${misc:Depends},
  ${python3:Depends},
  python3-requests,
  python3-rich,
+ python3-psutil,
  python3-pydbus,
  python3-libusb1,
  python3-netifaces,
