--- a/debian/rules
+++ b/debian/rules
@@ -5,7 +5,7 @@ export PYBUILD_NAME=pirogue_cli
 	dh $@ --with python3 --buildsystem=pybuild
 
 override_dh_builddeb:
-	dh_builddeb -- -Zgzip
+	dh_builddeb -- -Zxz
 
 # Shipped in the tarball, modified after a build:
 override_dh_clean:
